--- a/www/index.html
+++ b/www/index.html
@@ -32,6 +32,13 @@
           </div>
         </div>
         <div class="form-group">
+          <div class="row">
+            <div class="col-12">
+              <button class= "btn btn-block btn-warning" id="butauqr">Buscar QR</button>
+            </div>
+          </div>
+        </div>
+        <div class="form-group">
         <div class="row">
 		      <div class="col-12">
             <label for="">Estado</label>
